# keycloak-playground

./: .gitignore  LICENSE  README.md  docker-compose.yaml
automation/: .env.example  README.md  __init__.py  automate.py  cli.py  clients.py  config.py  context.py  group_sync.py  pyproject.toml  server.py  webhook-examples.md
automation/automate/: __init__.py  commands.py
automation/gl/: __init__.py  client.py  commands.py  group_sync.py
automation/kc/: __init__.py  client.py  commands.py  groups.py
automation/kc/users/: __init__.py  actions.py  data.py  lifecycle.py  monitoring.py
docs/: index.md
docs/casts/: record-quickstart.sh  record-smoke-tests.sh  record-theme-dev.sh  record-tofu.sh  record-totp-watch.sh  smoke-tests.cast  theme-dev.cast  tofu-apply.cast  totp-watch.cast
docs/explanation/: index.md
docs/explanation/adrs/: 0001-keycloak-security-architecture.md  index.md
docs/how-to-guides/: cnpg-alerting-guide.md  index.md  observability.md  onboarding-dev-teams.md  provisioning.md  recording-terminal-sessions.md  smoke-tests.md  theme.md  user-lifecycle-automation.md
docs/reference/: architecture.md  index.md
docs/tutorials/: getting-started.md  index.md
grafana/: grafana.ini
grafana/provisioning/dashboards/: home.json  keycloak-v2.json
grafana/provisioning/datasources/: prometheus.yml
keycloak/: README.md  package.json
keycloak/providers/: .gitignore
keycloak/theme/: README.md  package-lock.json  package.json  vite.config.ts
keycloak/theme/src/: .gitignore  kc.gen.tsx
keycloak/theme/src/account/: KcAccountUi.tsx  main.css
keycloak/theme/src/login/: KcPage.tsx  main.css
prometheus/: prometheus-docker.yml  prometheus.yml
prometheus/rules/: keycloak-alerts.yml
smoke-tests/: .editorconfig  .gitignore  README.md  common.env  conftest.py  local.env.example  otp_manager.py  pyproject.toml  settings.py  test_01_keycloak.py  test_02_apps_health.py  test_10_browser_keycloak.py  totp.py
smoke-tests/services/: __init__.py  keycloak.py
test-client/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
test-client/templates/: error.html  index.html  profile.html
tofu/: .terraform.lock.hcl  README.md  client-scopes.tf  demo-users.tf  groups.tf  master-realm.tf  mfa.tf  oidc-clients.tf  organizations.tf  outputs.tf  provider.tf  realm-events.tf  realm-security.tf  realm.tf  seed_totp.py  variables.tf
