[project]
name = "keycloak-test-client"
version = "0.1.0"
description = "OIDC test client with Back-Channel Logout support for Keycloak demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.115.0",
    "authlib==1.3.1",
    "cryptography>=41.0.0",
    "itsdangerous==2.2.0",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "prometheus-fastapi-instrumentator==7.0.0",
    "python-multipart==0.0.9",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = []
